--- a/public/index.html
+++ b/public/index.html
@@ -9,32 +9,28 @@
 
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
+
+    <script data-main="js/main" src="http://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.8/require.min.js"></script>
+
   </head>
   <body>
     <div id="wrapper">
-      <header>
-        <h1>Hello World!</h1>
-      </header>
 
-      <article>
-        <p>This is Simple HTML5 Boilerplate.</p>
-      </article>
-
-      <footer>
-        Copyright (c) 2013
-      </footer>
     </div>
 
     <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.1.min.js"><\/script>')</script> -->
-    <script src="js/main.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
+    <!-- <script>
       var _gaq=[['_setAccount','UA-XXXXX-X'],['_trackPageview']];
       (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
       g.src='//www.google-analytics.com/ga.js';
       s.parentNode.insertBefore(g,s)}(document,'script'));
-    </script>
+    </script> -->
+
+    <img src="images/tower.jpg" alt="broken">
+    <video data-mediaid="Time_Lapse_Clip_Film"></video>
+    <audio data-mediaid="Richie_WelfareRoom"></audio>
   </body>
 </html>
