Basic scroll-based audio & video playback

--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
     </div>
 
     <div id="content">
-      <img src="images/tower.jpg" alt="broken">
-      <video data-mediaid="Time_Lapse_Clip_Film" loop></video>
-      <audio data-mediaid="Richie_WelfareRoom"></audio>
+      <img src="images/tower.jpg" data-0="opacity:0;" data-300="opacity:1;">
+      <video id="Time_Lapse_Clip_Film" data-start="500" data-stop="1200" loop></video>
+      <audio id="Richie_WelfareRoom" data-start="300" data-stop="1200"></audio>
     </div>
 
     </div>
