Scroll-based audio fading

--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,10 @@
 
     <div id="content">
       <img src="images/tower.jpg" data-0="opacity:0;" data-300="opacity:1;">
-      <video id="Time_Lapse_Clip_Film" data-start="500" data-stop="1200" loop></video>
-      <audio id="Richie_WelfareRoom" data-start="300" data-stop="1200"></audio>
+      <video id="Time_Lapse_Clip_Film" data-start="500" data-stop="2000" loop></video>
+      <audio id="Richie_WelfareRoom" data-start="300" data-stop="2000"></audio>
+      <img src="images/tower.jpg" data-0="opacity:0;" data-300="opacity:1;">
+      <img src="images/tower.jpg" data-0="opacity:0;" data-300="opacity:1;">
     </div>
 
     </div>
