--- a/public/index.html
+++ b/public/index.html
@@ -25,16 +25,17 @@
       <!-- <img src="images/tower.jpg" data-0="opacity:0;" data-300="opacity:1;"> -->
       <div class="fullscreen spacer"></div>
 <!--       <div data-0="opacity:0;" data-300="opacity:1;" class="skrollr-bg-image-tower fullscreen"></div> -->
-        <div class="skrollr-bg-image-tower cover-bg" style="height:500px;"  data-0="opacity:0;background-position:center -300px" data-500="opacity:1;background-position:center 0" ></div>
+        <div data-mediaid="tower" class="image cover-bg" style="height:500px;"  data-0="opacity:0;background-position:center -200px" data-500="opacity:1;background-position:center 0" ></div>
 
       <div class="video-container" style="height:700px;">
-        <video id="Time_Lapse_Clip_Film" data-0="top:-100px;" data-1000="top:0" data-start="500" data-stop="2000" loop></video>
+        <video data-mediaid="Time_Lapse_Clip_Film" data-0="top:-100px;" data-1000="top:0" data-start="500" data-stop="2000" loop></video>
       </div>
-      <audio id="Richie_WelfareRoom" data-start="300" data-stop="2000">
+
+      <audio data-mediaid="Richie_WelfareRoom" data-start="300" data-stop="2000">
         <div class="audio-caption">Here's a caption for this audio.</div>
       </audio>
 
-      <div class="skrollr-bg-image-tower cover-bg" style="height:700px; background-position: center center"  data-1000="opacity:1;background-size: 100%;" data-2500="opacity:1;background-size: 120%;" ></div>
+      <div data-mediaid="tower" class="image cover-bg" style="height:700px; background-position: center center"  data-1000="opacity:1;background-size: 100%;" data-2500="opacity:1;background-size: 120%;" ></div>
 
       <img src="images/tower.jpg" data-0="opacity:0;" data-300="opacity:1;">
       <img src="images/tower.jpg" data-0="opacity:0;" data-300="opacity:1;">
