Added mediator and dev mode

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,12 @@
     </div>
 
     <div id="content">
+
+
+      <audio data-mediaid="Steel_Music_From_3MinFilm" data-start="0" data-startfadelength="0" data-stop="4000">
+        <div class="audio-caption">Here's a caption for this audio.</div>
+      </audio>
+
       <!-- <img src="images/tower.jpg" data-0="opacity:0;" data-300="opacity:1;"> -->
       <div class="fullscreen spacer"></div>
 <!--       <div data-0="opacity:0;" data-300="opacity:1;" class="skrollr-bg-image-tower fullscreen"></div> -->
@@ -37,8 +43,9 @@
 
       <div data-mediaid="tower" class="image cover-bg" style="height:700px; background-position: center center"  data-1000="opacity:1;background-size: 100%;" data-2500="opacity:1;background-size: 120%;" ></div>
 
-      <img src="images/tower.jpg" data-0="opacity:0;" data-300="opacity:1;">
-      <img src="images/tower.jpg" data-0="opacity:0;" data-300="opacity:1;">
+      <div class="video-container" style="height:700px;">
+        <video data-mediaid="Glove_to_wide" data-0="top:-100px;" data-1000="top:0" data-start="2000" data-stop="3500" loop></video>
+      </div>
     </div>
 
     </div>
