--- a/public/index.html
+++ b/public/index.html
@@ -61,12 +61,7 @@
 
         <div id="textlayer">
           <div id="textlayer-shim" data-start="top:300px;" data-end="top:-300px;">
-            <div style="position:absolute;top:700px;" class="text-overlay"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-            tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-            consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-            cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-            proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <div style="position:absolute;top:700px;" class="text-overlay"><p>Hello!</p>
             </div>
           </div>
 
