--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
           </div>
 
           <div id="textlayer-shim" data-start="top:300px;" data-end="top:-300px;">
-            <div style="position:absolute;top:1200px;" class="text-overlay"><p>I'm great, you're great, whatever.
+            <div style="position:absolute;top:1200px;" class="text-overlay"><p>I'm great, you're great.
             </p>
             </div>
           </div>
