Preloader seems to be working relatively well now

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
           </audio>
 
           <div class="fullscreen spacer" style="overflow:hidden;">
-            <img src="images/illustration-white.png" >
+            <!-- <img src="images/illustration-white.png" > -->
           </div>
 
           <div data-mediaid="tower" class="image cover-bg" style="height:500px;margin-bottom:100px;"  data-0="opacity:0;background-position:center -200px" data-500="opacity:1;background-position:center 0"  data-1000="opacity:1;" data-1300="opacity:0;"></div>
@@ -58,7 +58,7 @@
           <div data-mediaid="pods" class="image cover-bg" style="height: 700px; background-position: center center;" data-2600="opacity:0;background-size: 100%;" data-3500="opacity:1;background-size: 120%;" ></div>
 
           <div class="video-container" style="height:700px;">
-            <video data-mediaid="Film_no_Audio_grass_and_steel_02" data-0="top:-100px;" data-4000="top:0" data-startmedia="3000" data-stopmedia="4500" loop></video>
+            <video data-mediaid="Film_no_Audio_grass_and_steel_02" data-0="top:-100px;" data-3500="top:0" data-startmedia="3000" data-stopmedia="4500" loop></video>
           </div>
 
         </div>
