change text fade tower extend intro

--- a/public/index.html
+++ b/public/index.html
@@ -29,11 +29,12 @@
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
 
-          <div class="fullscreen spacer" style="overflow:hidden;">
-            <!-- <img src="images/illustration-white.png" > -->
+          <div class="fullscreen spacer" style="overflow:scroll;">
+            <img src="images/illustration-white.png" >
+
           </div>
 
-          <div data-mediaid="tower" class="image cover-bg" style="height:500px;margin-bottom:100px;"  data-0="opacity:0;background-position:center -200px" data-500="opacity:1;background-position:center 0"  data-1000="opacity:1;" data-1300="opacity:0;"></div>
+          <div data-mediaid="tower" class="image cover-bg" style="height:1000px;margin-bottom:200px;"  data-0="opacity:0;background-position:center -200px" data-500="opacity:1;background-position:center 0"  data-1000="opacity:1;" data-1300="opacity:0;"></div>
 
 
 
@@ -67,12 +68,14 @@
 
 
           <div id="textlayer-shim" data-start="top:300px;" data-end="top:-300px;">
-            <div style="position:absolute;top:700px;" class="text-overlay"><p>We're trying to make a conflict!</p>
+            <div style="position:absolute;top:700px;" class="text-overlay"><p>For more than a century, 
+            Bethlehem Steel was a major 
+            center of American industry</p>
             </div>
           </div>
 
           <div id="textlayer-shim" data-start="top:300px;" data-end="top:-300px;">
-            <div style="position:absolute;top:1200px;" class="text-overlay"><p>I'm great, you're great.
+            <div style="position:absolute;top:850px;" class="text-overlay"><p>Workers at “The Steel” forged: 
             </p>
             </div>
           </div>
