--- a/public/index.html
+++ b/public/index.html
@@ -17,34 +17,52 @@
 
     <div id="wrapper">
 
+
+      <!-- ***************************************************************************
+        LOADING SCREEN
+      **************************************************************************** --> 
+
       <div id="loading">
         <h1>Loading</h1>
       </div>
+      <!-- /LOADING SCREEN -->
 
+
+      <!-- ***************************************************************************
+        MAIN CONTENT
+      **************************************************************************** -->
+      
       <div id="content">
+
+        <!-- ***************************************************************************
+          layer 1 for primary media
+        **************************************************************************** -->
 
         <div id="mainlayer">
 
+
+          <!-- "Steel_Music_From_3MinFilm" backround music -->
           <audio data-mediaid="Steel_Music_From_3MinFilm" data-startmedia="0" data-startfadelength="0" data-stopmedia="2400" data-maxvolume="0.5">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
+          <!-- /"Steel_Music_From_3MinFilm" background music -->
 
-          <div class="fullscreen spacer" style="overflow:scroll;">
-            <img src="images/illustration-white.png" >
 
-          </div>
-
+          <!-- "tower" photo -->
           <div data-mediaid="tower" class="image cover-bg" style="height:1000px;margin-bottom:200px;"  data-0="opacity:0;background-position:center -200px" data-500="opacity:1;background-position:center 0"  data-1000="opacity:1;" data-1300="opacity:0;"></div>
+          <!-- /"tower" photo -->
 
-
-
+          <!-- "Time_Lapse_Clip_Film" video -->
           <div class="video-container" style="height:700px;">
             <video data-mediaid="Time_Lapse_Clip_Film" data-0="top:-100px;" data-1000="top:0" data-startmedia="500" data-stopmedia="2000" loop></video>
           </div>
+          <!-- /"Time_Lapse_Clip_Film" video -->
 
+          <!-- "list_of_Stuff_made_at_Steel" audio -->
           <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="300" data-stopmedia="3000">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
+          <!-- /"list_of_Stuff_made_at_Steel" audio -->
 
           <div data-mediaid="pillars1" class="image cover-bg" style="height:700px; background-position: center center"  data-1000="opacity:1;background-size: 100%;" data-2500="opacity:1;background-size: 120%;" ></div>
 
@@ -63,23 +81,39 @@
           </div>
 
         </div>
+        <!-- /layer 1 for primary media -->
+
+        <!-- ***************************************************************************
+          layer 2 for overlayed elements (i.e. text)
+        **************************************************************************** -->
 
         <div id="textlayer">
 
-
+          <!-- this "textlayer-shim" div creates the parralax effect -->
           <div id="textlayer-shim" data-start="top:300px;" data-end="top:-300px;">
-            <div style="position:absolute;top:700px;" class="text-overlay"><p>For more than a century, 
-            Bethlehem Steel was a major 
-            center of American industry</p>
+
+            <!-- text overlay --> 
+            <div style="position:absolute;top:700px;" class="text-overlay">
+              <p>For more than a century, 
+              Bethlehem Steel was a major 
+              center of American industry</p>
             </div>
+            <!-- /text overlay -->
+
+            <!-- text overlay -->
+            <div style="position:absolute;top:850px;" class="text-overlay">
+              <p>Workers at “The Steel” forged:</p>
+            </div>
+            <!-- /text overlay -->
+
           </div>
 
-          <div id="textlayer-shim" data-start="top:300px;" data-end="top:-300px;">
-            <div style="position:absolute;top:850px;" class="text-overlay"><p>Workers at “The Steel” forged: 
-            </p>
-            </div>
-          </div>
-       </div>
+
+        </div>
+        <!-- /layer 2 for overlayed elements (i.e. text) -->
+
+      </div>
+      <!-- /MAIN CONTENT -->
 
     </div>
 
