--- a/public/index.html
+++ b/public/index.html
@@ -23,15 +23,18 @@
       **************************************************************************** --> 
 
       <div id="loading">
+
         <h1>Loading</h1>
+
       </div>
-      <!-- /LOADING SCREEN -->
+
+      <!-- end LOADING SCREEN -->
 
 
       <!-- ***************************************************************************
         MAIN CONTENT
       **************************************************************************** -->
-      
+
       <div id="content">
 
         <!-- ***************************************************************************
@@ -45,75 +48,99 @@
           <audio data-mediaid="Steel_Music_From_3MinFilm" data-startmedia="0" data-startfadelength="0" data-stopmedia="2400" data-maxvolume="0.5">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
-          <!-- /"Steel_Music_From_3MinFilm" background music -->
+          <!-- end "Steel_Music_From_3MinFilm" background music -->
+
 
 
           <!-- "tower" photo -->
           <div data-mediaid="tower" class="image cover-bg" style="height:1000px;margin-bottom:200px;"  data-0="opacity:0;background-position:center -200px" data-500="opacity:1;background-position:center 0"  data-1000="opacity:1;" data-1300="opacity:0;"></div>
-          <!-- /"tower" photo -->
+          <!-- end "tower" photo -->
+
+
 
           <!-- "Time_Lapse_Clip_Film" video -->
           <div class="video-container" style="height:700px;">
             <video data-mediaid="Time_Lapse_Clip_Film" data-0="top:-100px;" data-1000="top:0" data-startmedia="500" data-stopmedia="2000" loop></video>
           </div>
-          <!-- /"Time_Lapse_Clip_Film" video -->
+          <!-- end "Time_Lapse_Clip_Film" video -->
+
+
 
           <!-- "list_of_Stuff_made_at_Steel" audio -->
           <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="300" data-stopmedia="3000">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
-          <!-- /"list_of_Stuff_made_at_Steel" audio -->
+          <!-- end "list_of_Stuff_made_at_Steel" audio -->
 
+
+
+          <!-- "pillars1" photo -->
           <div data-mediaid="pillars1" class="image cover-bg" style="height:700px; background-position: center center"  data-1000="opacity:1;background-size: 100%;" data-2500="opacity:1;background-size: 120%;" ></div>
+          <!-- end "pillars1" photo -->
 
+
+
+          <!-- "Glove_to_wide" video -->
           <div class="video-container" style="height:700px;">
             <video data-mediaid="Glove_to_wide" data-0="top:-100px;" data-1000="top:0" data-startmedia="2000" data-stopmedia="3500" loop></video>
           </div>
+          <!-- end "Glove_to_wide" video -->
 
+
+
+          <!-- "Richie_WelfareRoom" audio -->
           <audio data-mediaid="Richie_WelfareRoom" data-startmedia="2400" data-stopmedia="5000">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
+          <!-- end "Richie_WelfareRoom" audio -->
 
+
+
+          <!-- "pods" photo -->
           <div data-mediaid="pods" class="image cover-bg" style="height: 700px; background-position: center center;" data-2600="opacity:0;background-size: 100%;" data-3500="opacity:1;background-size: 120%;" ></div>
+          <!-- end "pods" photo -->
 
+
+
+          <!-- "Film_no_Audio_grass_and_steel_02" video -->
           <div class="video-container" style="height:700px;">
             <video data-mediaid="Film_no_Audio_grass_and_steel_02" data-0="top:-100px;" data-3500="top:0" data-startmedia="3000" data-stopmedia="4500" loop></video>
           </div>
+          <!-- end "Film_no_Audio_grass_and_steel_02" video -->
+
 
         </div>
-        <!-- /layer 1 for primary media -->
+        <!-- end layer 1 for primary media -->
 
         <!-- ***************************************************************************
           layer 2 for overlayed elements (i.e. text)
         **************************************************************************** -->
 
         <div id="textlayer">
-
           <!-- this "textlayer-shim" div creates the parralax effect -->
           <div id="textlayer-shim" data-start="top:300px;" data-end="top:-300px;">
 
             <!-- text overlay --> 
-            <div style="position:absolute;top:700px;" class="text-overlay">
+            <div style="position:absolute;top:1300px;" class="text-overlay">
               <p>For more than a century, 
               Bethlehem Steel was a major 
               center of American industry</p>
             </div>
-            <!-- /text overlay -->
+            <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="position:absolute;top:850px;" class="text-overlay">
+            <div style="position:absolute;top:1500px;" class="text-overlay">
               <p>Workers at “The Steel” forged:</p>
             </div>
-            <!-- /text overlay -->
+            <!-- end text overlay -->
 
           </div>
-
-
+          <!-- end "textlayer-shim" div
         </div>
-        <!-- /layer 2 for overlayed elements (i.e. text) -->
+        <!-- end layer 2 for overlayed elements (i.e. text) -->
 
       </div>
-      <!-- /MAIN CONTENT -->
+      <!-- end MAIN CONTENT -->
 
     </div>
 
