Trying to troubleshoot media loading issues

--- a/public/index.html
+++ b/public/index.html
@@ -49,14 +49,26 @@
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Steel_Music_From_3MinFilm" background music -->
+     
 
-
-
-          <!-- "tower" photo -->
+        <!-- "tower" photo -->
           <div data-mediaid="tower" class="image cover-bg" style="height:1000px;margin-bottom:200px;"  data-0="opacity:0;background-position:center -200px" data-500="opacity:1;background-position:center 0"  data-1000="opacity:1;" data-1300="opacity:0;"></div>
           <!-- end "tower" photo -->
 
 
+       <!-- "WelfareRoom" video -->
+          <div class="video-container" style="height:700px;">
+            <video data-mediaid="WelfareRoom" data-0="top:-150px;" data-1000="top:0" data-startmedia="500" data-stopmedia="2000" loop></video>
+          </div>
+          <!-- end "WelfareRoom" video -->
+        
+        <!-- "green" photo -->
+          <div data-mediaid="green" class="image cover-bg" style="height:500px; background-position: center center"  data-1000="opacity:1;background-size: 100%;" data-2500="opacity:1;background-size: 120%;" ></div>
+          <!-- end "green" photo -->
+
+          <!-- "snow_BS_town_IA" photo -->
+          <div data-mediaid="snow_BS_town_IA" class="image cover-bg" style="height:700px; background-position: center center"  data-1000="opacity:1;background-size: 100%;" data-2500="opacity:1;background-size: 120%;" ></div>
+          <!-- end "snow_BS_town_IA" photo -->
 
           <!-- "Time_Lapse_Clip_Film" video -->
           <div class="video-container" style="height:700px;">
@@ -64,7 +76,9 @@
           </div>
           <!-- end "Time_Lapse_Clip_Film" video -->
 
-
+          <!-- "cemetary" photo -->
+          <div data-mediaid="cemetary" class="image cover-bg" style="height:700px; background-position: center center"  data-1000="opacity:1;background-size: 100%;" data-2500="opacity:1;background-size: 120%;" ></div>
+          <!-- end "cemetary" photo -->
 
           <!-- "list_of_Stuff_made_at_Steel" audio -->
           <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="300" data-stopmedia="3000">
