add illustration to top

--- a/public/index.html
+++ b/public/index.html
@@ -50,10 +50,19 @@
           </audio>
           <!-- end "Steel_Music_From_3MinFilm" background music -->
      
+        <!-- "blastfurnace_illustration_gray" photo -->
+          <div data-mediaid="blastfurnace_illustration_gray" class="image cover-bg" style="height:1000px;margin-bottom:200px;"  data-0="opacity:0;background-position:center -200px" data-500="opacity:1;background-position:center 0"  data-1000="opacity:1;" data-1300="opacity:0;"></div>
+          <!-- end "blastfurnace_illustration_gray" photo -->
+
 
         <!-- "tower" photo -->
           <div data-mediaid="tower" class="image cover-bg" style="height:1000px;margin-bottom:200px;"  data-0="opacity:0;background-position:center -200px" data-500="opacity:1;background-position:center 0"  data-1000="opacity:1;" data-1300="opacity:0;"></div>
           <!-- end "tower" photo -->
+
+
+          <!-- "pillars1" photo -->
+          <div data-mediaid="pillars1" class="image cover-bg" style="height:700px; background-position: center center"  data-1000="opacity:1;background-size: 100%;" data-2500="opacity:1;background-size: 120%;" ></div>
+          <!-- end "pillars1" photo -->
 
 
        <!-- "WelfareRoom" video -->
@@ -85,12 +94,6 @@
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "list_of_Stuff_made_at_Steel" audio -->
-
-
-
-          <!-- "pillars1" photo -->
-          <div data-mediaid="pillars1" class="image cover-bg" style="height:700px; background-position: center center"  data-1000="opacity:1;background-size: 100%;" data-2500="opacity:1;background-size: 120%;" ></div>
-          <!-- end "pillars1" photo -->
 
 
 
