--- a/public/index.html
+++ b/public/index.html
@@ -50,13 +50,25 @@
           </audio>
           <!-- end "Steel_Music_From_3MinFilm" background music -->
      
+        <!-- "blastfurnaceillustrationgray" photo -->
+          <div data-mediaid="blastfurnace_illustration_gray" class="image cover-bg" style="height:1000px;margin-bottom:200px;"  data-0="opacity:0;background-position:center -200px" data-500="opacity:1;background-position:center 0"  data-1000="opacity:1;" data-1300="opacity:0;"></div>
+          <!-- end "blastfurnaceillustrationgray" photo -->
 
-        <!-- "tower" photo -->
+
+         <!-- "tower" photo -->
           <div data-mediaid="tower" class="image cover-bg" style="height:1000px;margin-bottom:200px;"  data-0="opacity:0;background-position:center -200px" data-500="opacity:1;background-position:center 0"  data-1000="opacity:1;" data-1300="opacity:0;"></div>
           <!-- end "tower" photo -->
 
 
-       <!-- "WelfareRoom" video -->
+          <!-- "pillars1" photo -->
+          <div data-mediaid="pillars1" class="image cover-bg" style="height:700px; background-position: center center"  data-1000="opacity:1;background-size: 100%;" data-2500="opacity:1;background-size: 120%;" ></div>
+          <!-- end "pillars1" photo -->
+ 
+         <!-- "phone" photo -->
+          <div data-mediaid="phone" class="image cover-bg" style="height:700px; background-position: center center"  data-1000="opacity:1;background-size: 100%;" data-2500="opacity:1;background-size: 120%;" ></div>
+          <!-- end "phone" photo -->
+
+         <!-- "WelfareRoom" video -->
           <div class="video-container" style="height:700px;">
             <video data-mediaid="WelfareRoom" data-0="top:-150px;" data-1000="top:0" data-startmedia="500" data-stopmedia="2000" loop></video>
           </div>
@@ -66,9 +78,9 @@
           <div data-mediaid="green" class="image cover-bg" style="height:500px; background-position: center center"  data-1000="opacity:1;background-size: 100%;" data-2500="opacity:1;background-size: 120%;" ></div>
           <!-- end "green" photo -->
 
-          <!-- "snow_BS_town_IA" photo -->
+          <!-- "snowBStownIA" photo -->
           <div data-mediaid="snow_BS_town_IA" class="image cover-bg" style="height:700px; background-position: center center"  data-1000="opacity:1;background-size: 100%;" data-2500="opacity:1;background-size: 120%;" ></div>
-          <!-- end "snow_BS_town_IA" photo -->
+          <!-- end "snowBStownIA" photo -->
 
           <!-- "Time_Lapse_Clip_Film" video -->
           <div class="video-container" style="height:700px;">
@@ -85,12 +97,6 @@
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "list_of_Stuff_made_at_Steel" audio -->
-
-
-
-          <!-- "pillars1" photo -->
-          <div data-mediaid="pillars1" class="image cover-bg" style="height:700px; background-position: center center"  data-1000="opacity:1;background-size: 100%;" data-2500="opacity:1;background-size: 120%;" ></div>
-          <!-- end "pillars1" photo -->
 
 
 
