change empty room AR to abstact_butter/ space adjust

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
           </audio> -->
           <!-- end "Steel_Music_From_3MinFilm" background music -->
 
-          <div style="background: #6d6d6d; height: 800px;"></div>
+          <div style="background: #191919; height: 800px;"></div>
 
         <!-- "blastfurnaceillustrationgray" photo -->
           <div data-mediaid="blastfurnaceillustrationgray" id="startIllustration" class="image"></div>
@@ -70,7 +70,7 @@
 
 
          <!-- "empty_room715_JB" photo -->
-          <div data-mediaid="empty_room715_JB" class="image cover-bg" style="height:1000px;"></div>
+          <div data-mediaid="empty_room715_JB" class="image cover-bg" style="height:1235px;"></div>
           <!-- end "empty_room715_JB" photo -->
 
           <!-- "list_of_Stuff_made_at_Steel" backround music -->
@@ -80,15 +80,15 @@
           <!-- end "list_of_Stuff_made_at_Steel" background music -->
 
          <!-- "Aerial_NoAudio" video -->
-          <div class="video-container" style="height:800px;">
+          <div class="video-container" style="height:600px;">
             <video data-mediaid="Aerial_NoAudio" data-startmedia="2000" data-stopmedia="4250" loop></video>
           </div>
           <!-- end "Aerial_NoAudio" video -->
 
 
-         <!-- "empty_room01_AR" photo -->
-          <div data-mediaid="empty_room01_AR" class="image cover-bg" style="height:800px;"></div>
-          <!-- end "empty_room01_AR" photo -->
+         <!-- "abstract_butter02_AR" photo -->
+          <div data-mediaid="abstract_butter02_AR" class="image cover-bg" style="height:800px;"></div>
+          <!-- end "abstract_butter02_AR" photo -->
 
          <!-- "BS02_JB" photo -->
           <div data-mediaid="BS02_JB" class="image cover-bg" style="height:900px;"></div>
