image changes and spacing continued

--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
 
 
          <!-- "empty_room715_JB" photo -->
-          <div data-mediaid="empty_room715_JB" class="image cover-bg" style="height:1235px;"></div>
+          <div data-mediaid="empty_room715_JB" class="image cover-bg" style="height:935px;"></div>
           <!-- end "empty_room715_JB" photo -->
 
           <!-- "list_of_Stuff_made_at_Steel" backround music -->
@@ -105,44 +105,36 @@
           <!-- end "WelfareRoom" video -->
         
         <!-- "empty_room06_AR" photo -->
-          <div data-mediaid="empty_room06_AR" class="image cover-bg" style="height:800px;"></div>
+          <div data-mediaid="empty_room06_AR" class="image cover-bg" style="height:975px;"></div>
           <!-- end "empty_room06_AR" photo -->
 
 
          <!-- "reflections_NoAudio" video -->
-          <div class="video-container" style="height:700px;">
+          <div class="video-container" style="height:1200px;">
             <video data-mediaid="reflections_NoAudio"  data-startmedia="7000" data-stopmedia="8800" loop></video>
           </div>
           <!-- end "reflections_NoAudio" video -->
 
 
-
-          <!-- "clue_tools_AR" photo -->
-          <div data-mediaid="clue_tools_AR" class="image cover-bg" style="height:700px;"></div>
-          <!-- end "clue_tools_AR" photo -->
+          <!-- "high_house_gears01_JB" photo -->
+          <div data-mediaid="high_house_gears01_JB" class="image cover-bg" style="height:1200px;"></div>
+          <!-- end "high_house_gears01_JB" photo -->
 
 
           <!-- "making_steel_richie" video -->
-          <div class="video-container" style="height:500px;">
+          <div class="video-container" style="height:1000px;">
             <video data-mediaid="making_steel_richie" data-startmedia="8500" data-stopmedia="10000" loop></video>
           </div>
           <!-- end "making_steel_richie" video -->          
 
-          <!-- "snowBStownIA" photo -->
-          <div data-mediaid="snowBStownIA" class="image cover-bg" style="height:700px;"></div>
-          <!-- end "snowBStownIA" photo -->
-
 
           <!-- "snow_doorway01_AR" photo -->
-          <div data-mediaid="snow_doorway01_AR" class="image cover-bg" style="height:700px;"></div>
+          <div data-mediaid="snow_doorway01_AR" class="image cover-bg" style="height:1000px;"></div>
           <!-- end "snow_doorway01_AR" photo -->
 
-          <!-- "blast_furnaceD02_IA" photo -->
-          <div data-mediaid="blast_furnaceD02_IA" class="image cover-bg" style="height:700px;"></div>
-          <!-- end "blast_furnaceD02_IA" photo -->
 
           <!-- "Time_Lapse_Clip_Film" video -->
-          <div class="video-container" style="height:700px;">
+          <div class="video-container" style="height:900px;">
             <video data-mediaid="Time_Lapse_Clip_Film" data-startmedia="11000" data-stopmedia="13000" loop></video>
           </div>
           <!-- end "Time_Lapse_Clip_Film" video -->
