adjusting sounds and positions

--- a/public/index.html
+++ b/public/index.html
@@ -45,9 +45,9 @@
 
 
           <!-- "Steel_Music_From_3MinFilm" backround music -->
-<!--           <audio data-mediaid="Steel_Music_From_3MinFilm" data-startmedia="0" data-startfadelength="0" data-stopmedia="2400" data-maxvolume="0.5">
+          <audio data-mediaid="Steel_Music_From_3MinFilm" data-startmedia="0" data-startfadelength="0" data-stopmedia="2400" data-maxvolume="0.5">
             <div class="audio-caption">Here's a caption for this audio.</div>
-          </audio> -->
+          </audio>
           <!-- end "Steel_Music_From_3MinFilm" background music -->
 
           <div style="background: #191919; height: 800px;"></div>
@@ -63,9 +63,9 @@
 
 
           <!-- "Factory_Ambience2" backround music -->
-          <audio data-mediaid="Factory_Ambience2" data-startmedia="1000" data-stopmedia="3300">
-            <div class="audio-caption">Here's a caption for this audio.</div>
-          </audio>
+          <!-- <audio data-mediaid="Factory_Ambience2" data-startmedia="1000" data-stopmedia="3300"> -->
+            <!-- <div class="audio-caption">Here's a caption for this audio.</div> -->
+          <!-- </audio> -->
           <!-- end "Factory_Ambience2" background music -->
 
 
@@ -74,7 +74,7 @@
           <!-- end "empty_room715_JB" photo -->
 
           <!-- "list_of_Stuff_made_at_Steel" backround music -->
-          <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="3000" data-stopmedia="5000">
+          <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="1700" data-stopmedia="5000">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "list_of_Stuff_made_at_Steel" background music -->
@@ -100,7 +100,7 @@
 
          <!-- "WelfareRoom" video -->
           <div class="video-container" style="height:1200px;">
-            <video data-mediaid="WelfareRoom"  data-startmedia="5000" data-stopmedia="7200" loop></video>
+            <video data-mediaid="WelfareRoom"  data-startmedia="6000" data-stopmedia="7200" loop></video>
           </div>
           <!-- end "WelfareRoom" video -->
         
