photo changes, video swaps and space changes

--- a/public/index.html
+++ b/public/index.html
@@ -81,7 +81,7 @@
 
          <!-- "Aerial_NoAudio" video -->
           <div class="video-container" style="height:600px;">
-            <video data-mediaid="Aerial_NoAudio" data-startmedia="2000" data-stopmedia="4250" loop></video>
+            <video data-mediaid="Aerial_NoAudio" data-startmedia="1500" data-stopmedia="4250" loop></video>
           </div>
           <!-- end "Aerial_NoAudio" video -->
 
@@ -110,8 +110,8 @@
 
 
          <!-- "reflections_NoAudio" video -->
-          <div class="video-container" style="height:1200px;">
-            <video data-mediaid="reflections_NoAudio"  data-startmedia="7000" data-stopmedia="8800" loop></video>
+          <div class="video-container" style="height:800px;">
+            <video data-mediaid="reflections_NoAudio"  data-startmedia="7000" data-stopmedia="10000" loop></video>
           </div>
           <!-- end "reflections_NoAudio" video -->
 
@@ -121,11 +121,11 @@
           <!-- end "high_house_gears01_JB" photo -->
 
 
-          <!-- "making_steel_richie" video -->
+          <!-- "making_steel" video -->
           <div class="video-container" style="height:1000px;">
-            <video data-mediaid="making_steel_richie" data-startmedia="8500" data-stopmedia="10000" loop></video>
+            <video data-mediaid="making_steel" data-startmedia="8500" data-stopmedia="10000" loop></video>
           </div>
-          <!-- end "making_steel_richie" video -->          
+          <!-- end "making_steel" video -->          
 
 
           <!-- "snow_doorway01_AR" photo -->
@@ -135,7 +135,7 @@
 
           <!-- "Time_Lapse_Clip_Film" video -->
           <div class="video-container" style="height:900px;">
-            <video data-mediaid="Time_Lapse_Clip_Film" data-startmedia="11000" data-stopmedia="13000" loop></video>
+            <video data-mediaid="Time_Lapse_Clip_Film" data-startmedia="11000" data-stopmedia="17000" loop></video>
           </div>
           <!-- end "Time_Lapse_Clip_Film" video -->
 
@@ -152,7 +152,7 @@
           <!-- end "town_cemetary03_AR" photo -->
 
 
-          <!-- "town02_AR" photo -->
+          <!-- "town02bw_AR" photo -->
           <div data-mediaid="town02_AR" class="image cover-bg" style="height:700px;" ></div>
           <!-- end "town02_AR" photo -->
 
@@ -212,7 +212,7 @@
 
         <div id="textlayer">
           <!-- this "textlayer-shim" div creates the parralax effect -->
-          <div id="textlayer-shim" data-start="top:300px;" data-end="top:-300px;">
+          <div id="textlayer-shim" data-start="top:1600px;" data-end="top:-1800px;">
 
             <!-- text overlay --> 
             <div style="position:absolute;top:1300px;" class="text-overlay">
