black and white town photo

--- a/public/index.html
+++ b/public/index.html
@@ -153,8 +153,8 @@
 
 
           <!-- "town02bw_AR" photo -->
-          <div data-mediaid="town02_AR" class="image cover-bg" style="height:700px;" ></div>
-          <!-- end "town02_AR" photo -->
+          <div data-mediaid="town02bw_AR" class="image cover-bg" style="height:700px;" ></div>
+          <!-- end "town02bw_AR" photo -->
 
 
           <!-- "town01_AR" photo -->
