--- a/public/index.html
+++ b/public/index.html
@@ -224,7 +224,21 @@
 
             <!-- text overlay -->
             <div style="position:absolute;top:1500px;" class="text-overlay">
-              <p>Workers at “The Steel” forged:</p>
+              <p>Workers at “The Steel” forged:
+
+              Golden Gate Bridge
+              Empire State Building
+              Chrysler Building
+              Woolworth Building
+              Verrazano Bridge
+              Mackinac Bridge
+              Lincoln Tunnel
+              Holland Tunnel
+              Rockefeller Center
+              Madison Square Garden
+              Hoover Dam
+              WW II armaments & ships...
+</p>
             </div>
             <!-- end text overlay -->
 
