Updated image title for town02bw_AR, added margins to making_steel video

--- a/public/index.html
+++ b/public/index.html
@@ -122,8 +122,8 @@
 
 
           <!-- "making_steel" video -->
-          <div class="video-container" style="height:1000px;">
-            <video data-mediaid="making_steel" data-startmedia="8500" data-stopmedia="10000" loop></video>
+          <div class="video-container" style="height:1200px;margin-top:300px;margin-bottom: 300px;" >
+            <video data-mediaid="making_steel" data-startmedia="10000" data-stopmedia="12000" loop></video>
           </div>
           <!-- end "making_steel" video -->          
 
@@ -153,7 +153,7 @@
 
 
           <!-- "town02bw_AR" photo -->
-          <div data-mediaid="town02_AR" class="image cover-bg" style="height:700px;" ></div>
+          <div data-mediaid="town02bw_AR" class="image cover-bg" style="height:700px;" ></div>
           <!-- end "town02_AR" photo -->
 
 
@@ -229,7 +229,7 @@
             <!-- end text overlay -->
 
           </div>
-          <!-- end "textlayer-shim" div
+          <!-- end "textlayer-shim" div -->
         </div>
         <!-- end layer 2 for overlayed elements (i.e. text) -->
 
