--- a/public/index.html
+++ b/public/index.html
@@ -63,9 +63,9 @@
 
 
           <!-- "Factory_Ambience2" backround music -->
-          <!-- <audio data-mediaid="Factory_Ambience2" data-startmedia="1000" data-stopmedia="3300"> -->
-            <!-- <div class="audio-caption">Here's a caption for this audio.</div> -->
-          <!-- </audio> -->
+          <audio data-mediaid="Factory_Ambience2" data-startmedia="1000" data-stopmedia="3300" data-maxvolume="0.5">
+            <div class="audio-caption">Here's a caption for this audio.</div>
+          </audio>
           <!-- end "Factory_Ambience2" background music -->
 
 
