text_list of things made at steel

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
 
 
           <!-- "Steel_Music_From_3MinFilm" backround music -->
-          <audio data-mediaid="Steel_Music_From_3MinFilm" data-startmedia="0" data-startfadelength="0" data-stopmedia="2400" data-maxvolume="0.5">
+          <audio data-mediaid="Steel_Music_From_3MinFilm" data-startmedia="0" data-startfadelength="0" data-stopmedia="2400" data-maxvolume="0.75">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Steel_Music_From_3MinFilm" background music -->
@@ -58,30 +58,30 @@
 
 
          <!-- "tower" photo -->
-          <div data-mediaid="tower" class="image cover-bg" style="height:800px;" data-0="opacity:0;" data-1100="opacity:0; background-position: center -200px;" data-1600="opacity:1; background-position: center 0;" data-2000="opacity:1;" data-2300="opacity:0;"></div>
+          <div data-mediaid="tower" class="image cover-bg" style="height:800px;" data-0="opacity:0;" data-1100="opacity:1; background-position: center -200px;" data-1600="opacity:1; background-position: center 0;" data-2000="opacity:1;" data-2200="opacity:0;"></div>
           <!-- end "tower" photo -->
 
 
           <!-- "Factory_Ambience2" backround music -->
-          <audio data-mediaid="Factory_Ambience2" data-startmedia="1000" data-stopmedia="3300" data-maxvolume="0.5">
+          <audio data-mediaid="Factory_Ambience2" data-startmedia="1900" data-stopmedia="3300" data-maxvolume="0.15">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "Factory_Ambience2" background music -->
 
 
          <!-- "empty_room715_JB" photo -->
-          <div data-mediaid="empty_room715_JB" class="image cover-bg" style="height:935px;" data-2400="background-size: 120%;" data-2900="background-size: 100%"></div>
+          <div data-mediaid="empty_room715_JB" class="image cover-bg" style="height:935px;" data-2600="opacity:1;" data-3000="opacity:0;"></div>
           <!-- end "empty_room715_JB" photo -->
 
           <!-- "list_of_Stuff_made_at_Steel" backround music -->
-          <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="1700" data-stopmedia="5750">
+          <audio data-mediaid="list_of_Stuff_made_at_Steel" data-startmedia="2400" data-stopmedia="5750">
             <div class="audio-caption">Here's a caption for this audio.</div>
           </audio>
           <!-- end "list_of_Stuff_made_at_Steel" background music -->
 
          <!-- "Aerial_NoAudio" video -->
           <div class="video-container" style="height:600px;">
-            <video data-mediaid="Aerial_NoAudio" data-startmedia="1500" data-stopmedia="4250" data-2900="margin-top:-200px;" data-3500="margin-top:0px;" loop></video>
+            <video data-mediaid="Aerial_NoAudio" data-startmedia="1500" data-stopmedia="4250" loop></video>
           </div>
           <!-- end "Aerial_NoAudio" video -->
 
@@ -215,22 +215,51 @@
           <div id="textlayer-shim" data-start="top:1600px;" data-end="top:-1800px;">
 
             <!-- text overlay --> 
-            <div style="margin-top:1300px;" class="text-overlay" data-0="opacity:0;" data-1900="opacity:0;" data-2300="opacity:1;" data-2500="opacity:0">
+            <div style="margin-top:1300px;" class="text-overlay" data-0="opacity:0;" data-2000="opacity:0;" data-2400="opacity:1;" data-2500="opacity:0">
               <p>For more than a century,<br>
-              Bethlehem Steel was a major<br>
-              center of American industry</p>
+              Bethlehem Steel was a major center of American industry</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="margin-top:300px;" class="text-overlay" data-0="opacity:0;" data-2300="opacity:0;" data-2700="opacity:1;">
+            <div style="margin-top:200px;" class="text-overlay" data-0="opacity:0;" data-2300="opacity:0;" data-2400="opacity:1;">
               <p>Workers at “The Steel” forged:</p>
             </div>
             <!-- end text overlay -->
 
             <!-- text overlay -->
-            <div style="" class="text-overlay" data-0="opacity:0;" data-2600="opacity:0;" data-2900="opacity:1;">
+            <div style="" class="text-overlay" data-0="opacity:0;" data-2450="opacity:0;" data-2550="opacity:1;">
               <p>Golden Gate Bridge</p>
+            </div>
+            <!-- end text overlay -->
+
+            <!-- text overlay -->
+            <div style="" class="text-overlay" data-0="opacity:0;" data-2500="opacity:0;" data-2600="opacity:1;">
+              <p>Empire State Building</p>
+            </div>
+            <!-- end text overlay -->
+
+            <!-- text overlay -->
+            <div style="" class="text-overlay" data-0="opacity:0;" data-2600="opacity:0;" data-2650="opacity:1;">
+              <p>Chrysler Building</p>
+            </div>
+            <!-- end text overlay -->
+
+            <!-- text overlay -->
+            <div style="" class="text-overlay" data-0="opacity:0;" data-2675="opacity:0;" data-2750="opacity:1;">
+              <p>Woolworth Building</p>
+            </div>
+            <!-- end text overlay -->
+
+            <!-- text overlay -->
+            <div style="" class="text-overlay" data-0="opacity:0;" data-2775="opacity:0;" data-2850="opacity:1;">
+              <p>Verrazano Bridge</p>
+            </div>
+            <!-- end text overlay -->
+
+            <!-- text overlay -->
+            <div style="" class="text-overlay" data-0="opacity:0;" data-2875="opacity:0;" data-2950="opacity:1;">
+              <p>Mackinac Bridge</p>
             </div>
             <!-- end text overlay -->
 
